--- a/index.html
+++ b/index.html
@@ -86,37 +86,41 @@
 <div class="container-xxl py-5">
     <div class="container">
         <div class="row g-4">
+            <!-- Skilled Butchers -->
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
+                        <i class="fa fa-3x fa-drumstick-bite text-primary mb-4"></i>
                         <h5>Skilled Butchers</h5>
                         <p>Our expert butchers are trained in processing wild deer and hog meat with precision and care, ensuring optimal flavor and texture.</p>
                     </div>
                 </div>
             </div>
+            <!-- Quality Processing -->
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-item rounded pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
+                        <i class="fa fa-3x fa-industry text-primary mb-4"></i>
                         <h5>Quality Processing</h5>
                         <p>We use time-honored techniques and modern practices to guarantee that every cut meets the highest standards of quality.</p>
                     </div>
                 </div>
             </div>
+            <!-- Sausage Varieties -->
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="service-item rounded pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
+                        <i class="fa fa-3x fa-bacon text-primary mb-4"></i>
                         <h5>Sausage Varieties</h5>
                         <p>Choose from a range of products including ground meat, fresh links, smoked meats, summer sausage, and snack sticks tailored to your taste.</p>
                     </div>
                 </div>
             </div>
+            <!-- Reliable Service -->
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="service-item rounded pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-headset text-primary mb-4"></i>
+                        <i class="fa fa-3x fa-truck text-primary mb-4"></i>
                         <h5>Reliable Service</h5>
                         <p>Committed to customer satisfaction, we ensure prompt and efficient service, every time you place an order.</p>
                     </div>
@@ -179,6 +183,46 @@
     </div>
 </div>
 <!-- About End -->
+
+<!-- Price List Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+            <h5 class="section-title ff-secondary text-center text-primary fw-normal">Price Lists</h5>
+            <h1 class="mb-5">Our Pricing</h1>
+        </div>
+        <div class="row g-4">
+            <!-- Deer Price List -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="price-list-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/deer.jpg" alt="Deer Price List">
+                    <div class="price-list-info p-4">
+                        <h5 class="text-primary">Deer Price List</h5>
+                    </div>
+                </div>
+            </div>
+            <!-- Hug Price List -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="price-list-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/hug.jpg" alt="Hug Price List">
+                    <div class="price-list-info p-4">
+                        <h5 class="text-primary">Hug Price List</h5>
+                    </div>
+                </div>
+            </div>
+            <!-- Pig Price List -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="price-list-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/pig.jpg" alt="Pig Price List">
+                    <div class="price-list-info p-4">
+                        <h5 class="text-primary">Pig Price List</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Price List End -->
 
 
 <!-- Menu Start -->
