--- a/index.html
+++ b/index.html
@@ -626,9 +626,51 @@
 </div>
 <!-- Reservation End -->
 
+<!-- Gallery Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center mb-5">
+            <h5 class="section-title ff-secondary text-center text-primary fw-normal">Product Gallery</h5>
+            <h1 class="mb-4">Our Featured Products</h1>
+        </div>
+        <div class="row g-4">
+            <!-- Gallery Item 14 -->
+            <div class="col-lg-4 col-md-6">
+                <div class="gallery-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/14.jpg" alt="Product 14">
+                </div>
+            </div>
+            <!-- Gallery Item 15 -->
+            <div class="col-lg-4 col-md-6">
+                <div class="gallery-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/15.jpg" alt="Product 15">
+                </div>
+            </div>
+            <!-- Gallery Item 16 -->
+            <div class="col-lg-4 col-md-6">
+                <div class="gallery-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/16.jpg" alt="Product 16">
+                </div>
+            </div>
+            <!-- Gallery Item 17 -->
+            <div class="col-lg-6 col-md-6">
+                <div class="gallery-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/17.jpg" alt="Product 17">
+                </div>
+            </div>
+            <!-- Gallery Item 18 -->
+            <div class="col-lg-6 col-md-6">
+                <div class="gallery-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/18.jpg" alt="Product 18">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Gallery End -->
+
 
       
-        
 
       <!-- Footer Start -->
 <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
